--- a/index.html
+++ b/index.html
@@ -1,151 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brown Performance Website</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    :root {
-      --brown-dark: #3e2723;
-      --brown-main: #5d4037;
-      --brown-light: #8d6e63;
-      --brown-soft: #d7ccc8;
-      --white: #ffffff;
-    }
-
-    body {
-      font-family: system-ui, Arial, sans-serif;
-      background-color: var(--brown-soft);
-      color: var(--brown-dark);
-      line-height: 1.6;
-    }
-
-    .navbar {
-      background: var(--brown-dark);
-      color: var(--white);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 30px;
-    }
-
-    .logo {
-      font-size: 1.4rem;
-    }
-
-    .navbar nav a {
-      color: var(--white);
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: 500;
-    }
-
-    .navbar nav a:hover {
-      color: var(--brown-light);
-    }
-
-    .hero {
-      text-align: center;
-      padding: 80px 20px;
-      background: linear-gradient(
-        135deg,
-        var(--brown-main),
-        var(--brown-light)
-      );
-      color: var(--white);
-    }
-
-    .hero h2 {
-      font-size: 2.5rem;
-      margin-bottom: 15px;
-    }
-
-    .hero p {
-      max-width: 500px;
-      margin: 0 auto 25px;
-    }
-
-    .hero button {
-      background: var(--brown-dark);
-      color: var(--white);
-      border: none;
-      padding: 12px 30px;
-      font-size: 1rem;
-      cursor: pointer;
-      border-radius: 6px;
-    }
-
-    .hero button:hover {
-      background: #2b1a16;
-    }
-
-    .content {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 25px;
-      padding: 50px 30px;
-    }
-
-    .card {
-      background: var(--white);
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.08);
-    }
-
-    .card h3 {
-      margin-bottom: 10px;
-      color: var(--brown-main);
-    }
-
-    footer {
-      background: var(--brown-dark);
-      color: var(--white);
-      text-align: center;
-      padding: 15px;
-      font-size: 0.9rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-<body>
-
-  <header class="navbar">
-    <h1 class="logo">Rebuilding Hope</h1>
-  </header>
-
-  <section class="hero">
-    <h2>EcoFriendly</h2>
-    <p>Eco-Friendly Bamboo Building Project</p>
-  </section>
-
-  <section class="content">
-    <div class="card">
-      <h3>About Us</h3>
-      <p>We are a Grade 10 STEM team working on a capstone project that focuses on developing a fire-resistant and sustainable building using Dendrocalamus stocksii bamboo.
-
-Bamboo resists fire due to its internal structure composed of cellulose, hemicellulose, and lignin. These components promote charring instead of rapid combustion, while natural silica in bamboo provides an additional protective layer.</p>
-    </div>
-    <div class="card">
-      <h3>Team Members</h3>
-      <p>Hamza Mohamed · Anas Mohamed · Youssef Sameh · Ahmed Alaa · Ziad Mohamed</p>
-    </div>
-    <div class="card">
-      <h3>Contact Us</h3>
-      <p>Email: rebuildinghope.stem@gmail.com
-
-Location: STEM High School for Boys – 6th of October City, Egypt</p>
-    </div>
-  </section>
-
-  <footer>
-    <p>© 2026 Rebuilding Hope– Capstone</p>
-  </footer>
-
+<body style="background-color:rgb(23, 195, 149);">
+ <h1>hello my user</h1>
+ <ul>
+<li>my name is hamza</li>
+<li>i like making websites</li>
+<li>my best friend is anas</li>
+ </ul>
+  <img src="hamza.jpeg.jpeg" width="300" height="200"></body></img>
 </body>
 </html>
